              Triangle<3>::Type.  The new TriangleType enumeration is used for
              triangles within triangulations of all dimensions ≥ 3.
        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - Regarding Pachner moves:
              + The (check, perform) variant of pachner() is deprecated.
                You should now call pachner() _without_ extra check/perform
                arguments: the function will always check for and (if possible)
                perform the relevant move.
              + New routine hasPachner() for checking only.
              + New read-only routine withPachner() that (if possible) returns
                a new triangulation with the relevant move performed.
            - Regarding 2-0 moves:
              + These moves are now available for triangulations of all
                dimensions, but only for facial dimensions ≤ max(2, dim-2).
              + The (check, perform) function twoZeroMove() is deprecated.
                You should now call move20() instead, which does _not_ take
                extra check/perform arguments: move20() will always check for
                and (if possible) perform the relevant move.
              + New routine has20() for checking only.
              + New read-only routine with20() that (if possible) returns
                a new triangulation with the relevant move performed.
            - Regarding boundary shelling moves:
              + These moves are now available for triangulations of all
                _standard_ dimensions (2, 3 and 4).
              + The (check, perform) variant of shellBoundary() is deprecated.