@@ -123,6 +123,7 @@ template void TriangulationBase<11>::writeTextLong(std::ostream&) const;
 
 template void TriangulationBase<11>::reorderBFS(bool);
 template Triangulation<11> TriangulationBase<11>::doubleCover() const;
+template Triangulation<11> TriangulationBase<11>::doubleOverBoundary() const;
 template bool TriangulationBase<11>::finiteToIdeal();
 
 template std::string TriangulationBase<11>::source(Language) const;
