@@ -128,6 +128,7 @@ template void TriangulationBase<12>::writeTextLong(std::ostream&) const;
 
 template void TriangulationBase<12>::reorderBFS(bool);
 template Triangulation<12> TriangulationBase<12>::doubleCover() const;
+template Triangulation<12> TriangulationBase<12>::doubleOverBoundary() const;
 template bool TriangulationBase<12>::finiteToIdeal();
 
 template std::string TriangulationBase<12>::source(Language) const;
