@@ -143,6 +143,7 @@ template void TriangulationBase<15>::writeTextLong(std::ostream&) const;
 
 template void TriangulationBase<15>::reorderBFS(bool);
 template Triangulation<15> TriangulationBase<15>::doubleCover() const;
+template Triangulation<15> TriangulationBase<15>::doubleOverBoundary() const;
 template bool TriangulationBase<15>::finiteToIdeal();
 
 template std::string TriangulationBase<15>::source(Language) const;
