@@ -96,6 +96,7 @@ template void TriangulationBase<6>::writeTextLong(std::ostream&) const;
 
 template void TriangulationBase<6>::reorderBFS(bool);
 template Triangulation<6> TriangulationBase<6>::doubleCover() const;
+template Triangulation<6> TriangulationBase<6>::doubleOverBoundary() const;
 template bool TriangulationBase<6>::finiteToIdeal();
 
 template std::string TriangulationBase<6>::source(Language) const;
